[gd_scene load_steps=2 format=3 uid="uid://dglu0mjokamr"]

[ext_resource type="Script" uid="uid://c8kqa7bx1522u" path="res://Scenes/settings.gd" id="1_4hxq3"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -284.0
offset_top = -134.0
offset_right = -284.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hxq3")

[node name="Label3" type="Label" parent="."]
layout_mode = 2
offset_left = 310.0
offset_top = 278.0
offset_right = 424.0
offset_bottom = 327.0
text = "Resolution
(windowed)"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 148.0
offset_right = 398.0
offset_bottom = 179.0
text = "Sound:"
uppercase = true

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 243.0
offset_right = 387.0
offset_bottom = 292.0
text = "GRAPHICS:
"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.248
anchor_right = 0.5
anchor_bottom = 0.248
offset_left = -273.0
offset_top = 21.296
offset_right = -49.0
offset_bottom = 65.296
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Volume (0-100db)"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 304.0
offset_right = 419.0
offset_bottom = 337.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="ResolutionMenu" type="OptionButton" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 0.049
anchor_right = 0.044
anchor_bottom = 0.049
offset_left = 255.312
offset_top = 328.248
offset_right = 334.312
offset_bottom = 379.248

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="DisplayModeMenu" type="OptionButton" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 3
popup/item_1/text = "Borderless"
popup/item_1/id = 5

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/ResolutionMenu" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer3/VBoxContainer/DisplayModeMenu" to="." method="_on_option_button_item_selected"]
